--- a/src/components/SwitchBtn/switchBtn.css
+++ b/src/components/SwitchBtn/switchBtn.css
@@ -1,77 +1,9 @@
-/* switch style */
-
-.switch-btn {
-  width: 52px;
-  height: 31px;
-  position: relative;
-  border: 1px solid #dfdfdf;
-  background-color: #fdfdfd;
-  box-shadow: #dfdfdf 0 0 0 0 inset;
-  border-radius: 20px;
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  background-clip: content-box;
-  display: inline-block;
-  cursor: pointer;
-  appearance: none;
-  -webkit-appearance: none;
-  user-select: none;
-  outline: none;
-}
-
-.switch-btn::before {
-  content: '';
-  width: 29px;
-  height: 29px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 20px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  background-color: #fff;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
-}
-
-.switch-btn:checked {
-  border-color: var(--theme-purple);
-  box-shadow: var(--theme-purple) 0 0 0 16px inset;
-  background-color: var(--theme-purple);
-}
-
-.switch-btn:checked::before {
-  left: 21px;
-}
-
-/* 仅仅简单背景颜色过渡 */
-.switch-btn.switch-animate-bg {
-  transition: background-color ease 0.4s;
-}
-.switch-btn.switch-animate-bg::before {
-  transition: left 0.3s;
-}
-
-.switch-btn.switch-animate-bg:checked {
-  box-shadow: #dfdfdf 0 0 0 0 inset;
-  background-color: var(---purple);
-  transition: border-color 0.4s, background-color ease 0.4s
-}
-
-.switch-btn.switch-animate-bg:checked::before {
-  transition: left 0.3s;
-}
-
-
 /* ToggleSwitchButton css */
 
 .toggle-switch {
   position: relative;
   margin-right: 10px;
-  width: 50px;
+  width: 52px;
   height: 24px;
   display: inline-block;
   vertical-align: middle;
@@ -80,10 +12,11 @@
   -moz-user-select: none;
   -ms-user-select: none;
   text-align: left;
+  z-index: 1;
 }
 
 .toggle-switch .toggle-switch-checkbox {
-  display: none;
+  opacity: 0;
 }
 
 .toggle-switch .toggle-switch-label {
@@ -94,7 +27,16 @@
   height: 100%;
   cursor: pointer;
   border: 0 solid #c4c2c2;
-  border-radius: 20px;
+  padding: 0;
+  line-height: 24px;
+  box-sizing: border-box;
+  border-radius: var(--border-size);
+  border-top-left-radius: var(--border-size);
+  border-top-right-radius: var(--border-size);
+  border-bottom-left-radius: var(--border-size);
+  border-bottom-right-radius: var(--border-size);
+  box-shadow: 0 1px 3px #6f6e6e;
+  z-index: 0;
 }
 
  .toggle-switch .toggle-switch-label:focus {
@@ -105,45 +47,37 @@
   outline: none;
 }
 
-.toggle-switch .toggle-switch-inner {
+.toggle-switch .toggle-switch-dark, .toggle-switch .toggle-switch-sun {
   position: absolute;
   width: 100%;
-}
-
-
-.toggle-switch .toggle-switch-inner:before, 
-.toggle-switch .toggle-switch-inner:after {
-  position: absolute;
-  width: 100%;
-  padding: 0;
-  line-height: 24px;
-  font-size: 14px;
-  color: white;
-  font-weight: bold;
-  box-sizing: border-box;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  box-shadow: 0 1px 3px #6f6e6e;
-  background: #fff;
-}
-
-.toggle-switch  .toggle-switch-inner:before {
-  content: attr( data-dark-icon);
-  text-transform: uppercase;
-  padding-left: 10px;
+  height: 100%;
+  border-radius: var(--border-size);
   background-color: var(--theme-dark);
-  color: #fff;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 0;
 }
 
-.toggle-switch .toggle-switch-inner:after {
-  content: attr(data-sun-icon);
-  text-transform: uppercase;
-  padding-right: 10px;
-  background-color: var(--theme-purple);
-  color: #fff;
-  text-align: right;
+.toggle-switch .toggle-switch-sun {
+  opacity: 1;
+}
+
+
+.toggle-switch  .toggle-switch-label > span > img {
+  position: absolute;
+  top: 1px;
+  width: 23px;
+  z-index: 0;
+}
+
+.toggle-switch .toggle-switch-label .toggle-switch-sun > img {
+  right: 2px;
+}
+
+.toggle-switch .toggle-switch-label .toggle-switch-dark > img {
+  top: 2px;
+  left: 3px;
+  width: 20px;
 }
 
 
@@ -158,27 +92,33 @@
 }
 
 .toggle-switch .toggle-switch-switch {
-  width: 22px;
-  height: 22px;
+  width: 24px;
+  height: 24px;
   background: #fff;
   position: absolute;
-  top: 1px;
+  top: 0;
   bottom: 0;
   right: 28px;
-  border: 1px solid #6f6e6e;
+  border: 1px solid var(--theme-dark);
   border-radius: 50%;
   transition: all 0.3s ease;
+  z-index: 0;
 }
 
-.toggle-switch-switch--focus .toggle-switch-switch {
-  border-color: violet;
-  box-shadow: 0 0 2px 3px violet;
+.toggle-switch .toggle-switch-label .toggle-switch-switch.switch-shadow {
+  border: 1px solid var(--theme-purple);
+  box-shadow: 0 0 2px 3px var(--theme-purple);
 }
 
 
-.toggle-switch-checkbox:checked +  .toggle-switch-label  .toggle-switch-inner:after {
+.toggle-switch-checkbox:checked + .toggle-switch-label  .toggle-switch-sun {
   opacity: 0;
 }
+
+.toggle-switch-checkbox:checked + .toggle-switch-label  .toggle-switch-dark {
+  opacity: 1;
+}
+
 .toggle-switch-checkbox:checked + .toggle-switch-label .toggle-switch-switch {
   right: 0
 }
