--- a/src/components/Toggle/toggle.css
+++ b/src/components/Toggle/toggle.css
@@ -52,7 +52,7 @@
   width: 100%;
   height: 100%;
   border-radius: var(--border-size);
-  background-color: var(--theme-dark);
+  background-color: var(--theme-dark-btn);
   opacity: 0;
   transition: opacity 0.3s ease;
   z-index: 0;
@@ -94,12 +94,12 @@
 .toggle-switch .toggle-switch-switch {
   width: 24px;
   height: 24px;
-  background: #fff;
+  background: var(--color-theme-dark);
   position: absolute;
   top: 0;
   bottom: 0;
   right: 28px;
-  border: 1px solid var(--theme-dark);
+  border: 1px solid var(--theme-dark-btn);
   border-radius: 50%;
   transition: all 0.3s ease;
   z-index: 0;
@@ -120,6 +120,10 @@
 }
 
 .toggle-switch-checkbox:checked + .toggle-switch-label .toggle-switch-switch {
+  right: 0
+}
+
+.toggle-switch .toggle-switch-label .switch-btn-moving {
   right: 0
 }
 
