--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -358,7 +358,7 @@ body.dark-mode a {
 
 body.dark-mode .header-link-home {
   font-size: var(--fontSize-4);
-  color: var(--color-theme-dark)
+  color: var(--theme-purple-dark)
 }
 
 body.dark-mode p {
@@ -382,7 +382,7 @@ body.dark-mode blockquote {
   margin-top: var(--spacing-8);
 }
 
-body.dark-mode .main-heading {
+body.dark-mode .main-heading a {
   color: var(--color-theme-dark);
 }
 
