--- a/src/utils/style.css
+++ b/src/utils/style.css
@@ -95,6 +95,14 @@ body {
   color: var(--color-text);
 }
 
+html .global-header {
+  margin-bottom: var(--spacing-16);
+}
+
+header {
+  margin-bottom: var(--spacing-8);
+}
+
 footer {
   padding: var(--spacing-6) var(--spacing-0);
 }
@@ -175,8 +183,6 @@ p {
   line-height: var(--lineHeight-relaxed);
   --baseline-multiplier: 0.179;
   --x-height-multiplier: 0.35;
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
-  padding: var(--spacing-0);
 }
 
 ul,
@@ -184,7 +190,7 @@ ol {
   margin-left: var(--spacing-0);
   margin-right: var(--spacing-0);
   padding: var(--spacing-0);
-  margin-bottom: var(--spacing-8);
+  margin-bottom: var(--spacing-2);
   list-style-position: outside;
   list-style-image: none;
 }
@@ -192,7 +198,6 @@ ol {
 ul li,
 ol li {
   padding-left: var(--spacing-0);
-  margin-bottom: calc(var(--spacing-8) / 2);
 }
 
 li > p {
@@ -209,14 +214,15 @@ li > ul {
 }
 
 blockquote {
-  color: var(--color-text-light);
+  color: var(--color-text-dark);
   margin-left: calc(-1 * var(--spacing-6));
   margin-right: var(--spacing-8);
   padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
   border-left: var(--spacing-1) solid var(--theme-purple);
-  font-size: var(--fontSize-2);
+  font-size: var(--fontSize-1);
   font-style: italic;
   margin-bottom: var(--spacing-8);
+  margin-top: var(--spacing-8);
 }
 
 blockquote > :last-child {
@@ -328,7 +334,7 @@ a:focus {
 }
 
 .gatsby-highlight {
-  margin-bottom: var(--spacing-8);
+  margin-bottom: var(--spacing-2);
 }
 
 /* Media queries */
@@ -370,10 +376,6 @@ body.dark p {
   font-size: var(--fontSize-1);
 }
 
-body.dark blockquote {
-  color: var(--color-text-dark)
-}
-
 .bio {
   flex-direction: column;
 }
@@ -397,10 +399,12 @@ body.dark .main-heading a {
 
 body.dark pre[class*="language-"] {
   background: var(--color-code-dark-bg);
+  font-size: var(--fontSize-0);
 }
 
 body.light pre[class*="language-"] {
   background: var(--color-code-light-bg);
+  font-size: var(--fontSize-0);
 }
 
 body.dark code[class*="language-"], 
