--- a/src/utils/style.css
+++ b/src/utils/style.css
@@ -443,3 +443,8 @@ pre[class*="language-"] .token.boolean {
 .gatsby-image-wrapper img {
   border-radius: 50%;
 }
+
+p > .gatsby-resp-image-wrapper {
+  width: 30%;
+  margin-left: 0 !important; 
+}
