--- a/src/components/Toggle/toggle.css
+++ b/src/components/Toggle/toggle.css
@@ -100,6 +100,11 @@
   z-index: 0;
 }
 
+.toggle-switch-switch:hover {
+  border: 1px solid var(--theme-purple);
+  box-shadow: 0 0 2px 2px var(--theme-purple);
+}
+
 .toggle-switch .toggle-switch-label .toggle-switch-switch.switch-shadow {
   border: 1px solid var(--theme-purple);
   box-shadow: 0 0 2px 2px var(--theme-purple);
