--- a/src/utils/style.css
+++ b/src/utils/style.css
@@ -11,6 +11,7 @@
   --maxWidth-3xl: 48rem;
   --maxWidth-4xl: 56rem;
   --maxWidth-full: "100%";
+  --maxWidth-wrapper: var(--maxWidth-2xl);
   --spacing-px: "1px";
   --spacing-0: 0;
   --spacing-1: 0.25rem;
@@ -26,6 +27,7 @@
   --spacing-20: 5rem;
   --spacing-24: 6rem;
   --spacing-32: 8rem;
+  --spacing-36: 10rem;
   --spacing-64: 36rem;
   --fontFamily-sans: "MontserratVariable", system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
@@ -258,9 +260,9 @@ a:focus {
 /* Custom classes */
 
 .global-wrapper {
-  margin: var(--spacing-0) auto;
-  /* max-width: var(--maxWidth-wrapper); */
-  padding: var(--spacing-10) var(--spacing-64) var(--spacing-10) var(--spacing-0);
+  margin: var(--spacing-0 )var(--spacing-36);
+  max-width: var(--maxWidth-wrapper);
+  padding: var(--spacing-10) var(--spacing-10);
 }
 
 .global-wrapper[data-is-root-path="true"] .bio {
