--- a/src/utils/style.css
+++ b/src/utils/style.css
@@ -120,7 +120,7 @@ h4,
 h5,
 h6 {
   font-family: var(--font-heading);
-  margin-top: var(--spacing-12);
+  margin-top: var(--spacing-10);
   margin-bottom: var(--spacing-6);
   line-height: var(--lineHeight-tight);
   letter-spacing: -0.025em;
@@ -146,19 +146,22 @@ h2 {
 }
 
 h3 {
+  margin-top: var(--spacing-8);
   font-size: var(--fontSize-4);
 }
 
 h4 {
-  margin-top: var(--spacing-10);
+  margin-top: var(--spacing-6);
   font-size: var(--fontSize-3);
 }
 
 h5 {
+  margin-top: var(--spacing-6);
   font-size: var(--fontSize-2);
 }
 
 h6 {
+  margin-top: var(--spacing-6);
   font-size: var(--fontSize-1);
 }
 
@@ -510,4 +513,12 @@ summary h1,summary h2,summary h3,summary h4,summary h5,summary h6 {
 
 summary h3,summary h4,summary h5,summary h6 {
   margin-top: var(--spacing-0);
+}
+
+.gatsby-remark-prismjs-copy-button-container {
+  left: -3px
+}
+
+.gatsby-remark-prismjs-copy-button-container .gatsby-remark-prismjs-copy-button {
+  color: var(--color-text-dark);
 }
