--- a/src/utils/style.css
+++ b/src/utils/style.css
@@ -564,6 +564,9 @@ summary h3,summary h4,summary h5,summary h6 {
     display: none;
   }
   
+  .content-menu {
+    padding-left: 0,75rem;
+  }
 }
 
 @media (max-width: 1256px) {
@@ -575,7 +578,10 @@ summary h3,summary h4,summary h5,summary h6 {
     opacity: 0;
     transition: all 0.5s ease-out;
     background-color: #fff;
-    margin-top: 1.25rem;
+    padding-top: 1.75rem;
+    z-index: 1;
+    box-shadow: 1px 1px 5px -2px var(--color-dark-heading);
+
   }
   
   .hide_menu {
@@ -584,7 +590,7 @@ summary h3,summary h4,summary h5,summary h6 {
   }
 
   #content-menu {
-    padding-top: var(--spacing-2);
+    padding-top: 0;
     margin-right: var(--spacing-3);
   }
 
