--- a/src/utils/style.css
+++ b/src/utils/style.css
@@ -208,7 +208,7 @@ li > p {
   margin-bottom: calc(var(--spacing-8) / 2);
 }
 
-li *:last-child {
+li:last-child {
   margin-bottom: var(--spacing-0);
 }
 
@@ -287,8 +287,8 @@ a:focus {
 }
 
 .post-list-item {
-  margin-bottom: var(--spacing-8);
-  margin-top: var(--spacing-8);
+  margin-bottom: var(--spacing-10);
+  /* margin-top: var(--spacing-8); */
 }
 
 .post-list-item p {
@@ -298,12 +298,12 @@ a:focus {
 .post-list-item h2 {
   font-size: var(--fontSize-4);
   color: var(--theme-purple);
-  margin-bottom: var(--spacing-2);
+  margin-bottom: var(--spacing-1);
   margin-top: var(--spacing-0);
 }
 
 .post-list-item header {
-  margin-bottom: var(--spacing-4);
+  margin-bottom: var(--spacing-1);
 }
 
 .header-link-home {
@@ -600,5 +600,9 @@ summary h3,summary h4,summary h5,summary h6 {
 
   .menu-icon {
     width: 1.5rem;
+  }
+
+  .post-list-item h2 {
+    font-size: var(--fontSize-3);
   }
 }
