--- a/src/utils/style.css
+++ b/src/utils/style.css
@@ -97,6 +97,10 @@ header {
   margin-bottom: var(--spacing-8);
 }
 
+header h2 a {
+  text-decoration: none;
+}
+
 section[itemprop="articleBody"] {
   padding-bottom: var(--spacing-8)
 }
@@ -398,6 +402,10 @@ body.dark .header-link-home {
   color: var(--theme-purple-dark)
 }
 
+body.dark .menu {
+  background-color: var(--theme-dark);
+}
+
 body.dark p {
   font-size: var(--fontSize-1);
 }
@@ -540,25 +548,37 @@ summary h3,summary h4,summary h5,summary h6 {
   margin: var(--spacing-3) 0;
 }
 
+/* html::-webkit-scrollbar {
+  width: 6px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: #4e4e4e;
+  border-radius: 6px;
+}
+
+html::-webkit-scrollbar-track {
+  background: transparent;
+} */
+
 @media (min-width: 1256px) {
   .menu {
     width: 325px;
     max-width: 600px;
     overflow: hidden;
     transform: translateX(0);
-    opacity: 1;
-    transition: all 0.5s ease-out;
+    transition: transform 0.5s ease-out;
   }
   
   .hide_menu {
     transform: translateX(-815px);
-    opacity: 0;
   }
   
   .menu_icon {
     width: 1.58rem;
     margin-bottom: 1rem;
     z-index: 2;
+    cursor: pointer;
   }
 
   .menu-icon {
@@ -568,31 +588,40 @@ summary h3,summary h4,summary h5,summary h6 {
   #content-menu {
     padding-left: 0.75rem;
   }
+/* 
+  #article-outline::-webkit-scrollbar {
+    width: 6px;
+  }
+  #article-outline::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    background: #4e4e4e;
+  }
+  #article-outline::-webkit-scrollbar-track {
+    background: transparent;
+  } */
 }
 
 @media (max-width: 1256px) {
-  .menu {
-    width: 325px;
-    max-width: 600px;
-    overflow: hidden;
-    transform: translateX(-815px);
-    opacity: 0;
-    transition: all 0.5s ease-out;
-    background-color: #fff;
-    padding-top: 1.75rem;
-    z-index: 1;
-    box-shadow: 1px 1px 5px -2px var(--color-dark-heading);
-
-  }
-  
-  .hide_menu {
-    transform: translateX(0);
-    opacity: 1;
-  }
-
   #content-menu {
     padding-top: 0;
     margin-right: var(--spacing-3);
+    width: 100%;
+  }
+
+  .menu {
+    width: 100%;
+    min-width: 375px;
+    overflow: hidden;
+    transform: translateY(-815px);
+    transition: transform 0.5s ease-out;
+    background-color: #fff;
+    padding-top: 1.75rem;
+    z-index: 1;
+    box-shadow: 0px 8px 10px -6px var(--color-dark-heading);
+  }
+  
+  .hide_menu {
+    transform: translateY(0);
   }
 
   .menu_icon {
