--- a/src/utils/style.css
+++ b/src/utils/style.css
@@ -89,6 +89,7 @@ html {
 
 body {
   font-family: var(--font-body);
+  font-display: block;
   font-size: var(--fontSize-1);
   color: var(--color-text);
 }
@@ -124,6 +125,7 @@ h4,
 h5,
 h6 {
   font-family: var(--font-heading);
+  font-display: block;
   margin-top: var(--spacing-10);
   margin-bottom: var(--spacing-6);
   line-height: var(--lineHeight-tight);
@@ -313,6 +315,7 @@ a:focus {
 .header-link-home {
   font-weight: var(--fontWeight-bold);
   font-family: var(--font-heading);
+  font-display: block;
   text-decoration: none;
   font-size: var(--fontSize-4);
 }
@@ -357,6 +360,7 @@ a:focus {
 main .blog-post header p {
   font-size: var(--fontSize-0);
   font-family: var(--font-heading);
+  font-display: block;
 }
 
 .blog-post-nav ul {
