--- a/src/utils/style.css
+++ b/src/utils/style.css
@@ -61,7 +61,7 @@
   --color-heading-black: black;
   --color-accent: #d1dce5;
 
-  --theme-purple: #984bbe;
+  --theme-purple: #763099;
   --theme-dark: #282c35;
   --theme-dark-btn: #000;
   --border-size: 20px;
@@ -98,7 +98,7 @@ header {
   margin-bottom: var(--spacing-8);
 }
 
-header h2 a {
+.post-list-item h2 a {
   text-decoration: none;
 }
 
@@ -293,7 +293,7 @@ a:focus {
 }
 
 .post-list-item {
-  margin-bottom: var(--spacing-12);
+  margin-bottom: var(--spacing-20);
   /* margin-top: var(--spacing-8); */
 }
 
@@ -340,17 +340,7 @@ a:focus {
 }
 
 .bio-avatar:hover {
-  /* animation: scale-flash 1s ease; */
   transform: scale(1.2);
-}
-
-@keyframes scale-flash {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(1.2);
-  }
 }
 
 .blog-post header h1 {
@@ -568,7 +558,7 @@ summary h3,summary h4,summary h5,summary h6 {
   .menu_icon {
     width: 1.58rem;
     margin-bottom: 1rem;
-    z-index: 2;
+    z-index: 1;
     cursor: pointer;
   }
 
@@ -596,7 +586,7 @@ summary h3,summary h4,summary h5,summary h6 {
     transition: transform 0.5s ease-out;
     background-color: #fff;
     padding-top: 1.75rem;
-    z-index: 1;
+    z-index: 10;
     box-shadow: 0px 8px 10px -6px var(--color-dark-heading);
   }
   
@@ -616,4 +606,8 @@ summary h3,summary h4,summary h5,summary h6 {
   .post-list-item h2 {
     font-size: var(--fontSize-4);
   }
+}
+
+.post-list-item:hover {
+  transform: scale(1.005);
 }
